fix spacing, sizing

--- a/styles.css
+++ b/styles.css
@@ -356,9 +356,13 @@ p, a {
     text-decoration: none;
 }
 
+p {
+  font-size: 14px;
+}
+
 h1 {
-    font-size: 1.5rem;
-    letter-spacing: 0.05em;
+    font-size: 1.3rem;
+    letter-spacing: 0.03em;
 }
 
 h2 {
@@ -423,14 +427,14 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 
 .article-thumb {
     grid-column: 1 / 4;
     padding-bottom: 15px;
-    padding-top: 25px;
 }
 
 .thumb-image > img {
@@ -444,6 +448,7 @@ ul {
 
 .thumb-category {
     color: #307256;
+    padding-top: 15px;
 }
 
 .thumb-footer {
@@ -452,9 +457,13 @@ ul {
 }
 
 .thumb-date, .thumb-time {
-    font-size: 0.8rem;
-    padding-right: 20px;
-    color: grey;
+    font-size: 0.9rem;
+    color: silver;
+    align-self: flex-end;
+}
+
+.thumb-date {
+  padding-right: 15px;
 }
 
 .carousel-header {
@@ -466,7 +475,7 @@ ul {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
-    padding-bottom: 25px;
+    height: 300px;
     -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
   }
@@ -489,13 +498,13 @@ ul {
 
   .card h5 {
     color: #307256;
+    font-size: 14px;
   }
 
-  .date-time {
+  /* .date-time {
       width: inherit;
-      margin-top: auto;
-      align-self: end;
-  }
+      align-self: flex-end;
+  } */
 
 .footer {
     grid-column: 1 / 4;
@@ -550,4 +559,27 @@ ul {
     grid-row: 4 / 5;
     align-self: center;
     padding: 10px 0px 10px 0px;
+}
+
+.fa-bars {
+  font-size: 1.1rem;
+  opacity: 0.7;
+}
+
+.fa-search {
+  font-size: 0.8rem;
+  opacity: 0.5;
+}
+
+
+.fa-clock {
+  padding-right: 2px;
+}
+
+p {
+  margin-top: 1em;
+}
+
+.card > h4 {
+  height: 50px;
 }
